# ia-usm-3y

./: .gitignore  README.md
lab01/: IA-lab01_Mamaliga-Artur_I2302.docx
lab01/src/: fsm_recognize_words.py
lab02/: IA-lab02_Mamaliga-Artur_I2302.docx
lab02/src/: build_tree.py  game_tree.py  main.py  minimax.py  minimax_ab_pruning.py  minmax.py
lab03/: pyproject.toml
lab03/boids/: __main__.py  boid.py  config.py  display.py  game.py
lab03/boids/boids.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
lab04/: .gitignore  README.MD  makefile
lab04/inc/: board.h  cell.h  render.h  rules.h  utils.h
lab04/src/: board.c  cell.c  main.c  render.c  rules.c  utils.c
